# yaml4c

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
examples/: bad_config.yaml  config.yaml  main.c
include/: yaml4c.h
src/: yaml4c.c
